# pyfilemanager

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
docs/: api.md  conf.py  demo.md  index.md  requirements.txt
pyfilemanager/: __init__.py
tests/: __init__.py  test_pyfilemanager.py
